--- a/src/main/resources/templates/linshidan.html
+++ b/src/main/resources/templates/linshidan.html
@@ -396,6 +396,9 @@
             <li class="active">
                 <a href="#compreAttendRecord" data-toggle="tab">临时工工单</a>
             </li>
+            <li>
+                <a th:href="@{/person/totiaoxiu}">调休单</a>
+            </li>
         </ul>
         <br>
         <p>
