--- a/src/main/resources/templates/qianka.html
+++ b/src/main/resources/templates/qianka.html
@@ -408,6 +408,9 @@
             <li>
                 <a th:href="@{/person/tolinshidan}">临时工工时单</a>
             </li>
+            <li>
+                <a th:href="@{/person/totiaoxiu}">调休单</a>
+            </li>
         </ul>
         <br>
         <p>
