人事考勤厂内完成

--- a/src/main/resources/templates/compreattenrecorddata.html
+++ b/src/main/resources/templates/compreattenrecorddata.html
@@ -585,6 +585,9 @@
                     <li>
                         <a th:href="@{/person/toMonthKQList}">月考勤明细</a>
                     </li>
+                    <li>
+                        <a th:href="@{/person/toQuickQuery}">快速查询</a>
+                    </li>
                 </ul>
                 <br>
                 <p>
