--- a/src/main/resources/templates/mainindex.html
+++ b/src/main/resources/templates/mainindex.html
@@ -195,6 +195,9 @@
                     <li>
                         <a th:href="@{/person/toZKandOutDataAll}" target="targetText"><span
                                 class="fa fa-caret-right"></span>考勤数据</a></li>
+                    <li>
+                        <a th:href="@{/person/toQuickQuery}" target="targetText"><span
+                                class="fa fa-caret-right"></span>快速查询</a></li>
                 </ul>
             </li>
 
