--- a/src/main/resources/templates/monthkqinfo.html
+++ b/src/main/resources/templates/monthkqinfo.html
@@ -437,6 +437,10 @@
                     <li class="active">
                         <a href="#compreAttendRecord" data-toggle="tab">月考勤明细</a>
                     </li>
+
+                    <li>
+                        <a th:href="@{/person/toQuickQuery}">快速查询</a>
+                    </li>
                 </ul>
                 <br>
                 <p>
